update home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
     />
-    <link href="styles.css?v=34" rel="stylesheet" />
+    <link href="styles.css?v=35" rel="stylesheet" />
   </head>
 
   <!-- Google tag (gtag.js) -->
@@ -75,10 +75,7 @@
           development.
         </p>
         <p>
-          Currently, I'm pursuing knowledge in server-side development at OFX,
-          previously working on API integration for customers and partners, and
-          presently aiding in the migration of legacy systems to modern
-          platforms.
+          Currently, I'm pursuing knowledge in server-side development at OFX, working on API integration for customers and partners, and previously assisting in the deprecation of outdated systems and migration and of legacy systems to modern platforms.
         </p>
         <p>
           I seek to further improve my understanding and fluency in multiple
